# MLToolsBot

./: .env_template  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  redis-init.sh  setup.cfg  tox.ini
.github/workflows/: build-test.yml  docker-build-deploy.yml  docker-build.yml  registry-pull.yml
examples/: conversationbot.py  conversationbot2.py  nestedconversationbot.py
mltoolsbot/: __init__.py  api.py  config.py  exceptions.py  main_bot_v1.py  main_bot_v2.py  redis.py  run.py
tests/: base_tests.py  test_base.py
