[tool.poetry]
name = "mltoolsbot"
version = "0.1.0"
description = "Repository for telegram bot which helps user with machine learning through communication and commands"
authors = ["Alexander <as.frantsev@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"
python-telegram-bot = "^20.7"
aiolimiter = "^1.1.0"
python-dotenv = "^1.0.0"
redis = "^5.2.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^24.2.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
